@@ -1,5 +1,5 @@
 Package: spgrass6
-Version: 0.6-22
+Version: 0.6-23
 Date: 2010-12-06
 Title: Interface between GRASS 6+ geographical information system and R
 Author: Roger Bivand
